--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 </div>
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded with ♥ by <a href="#">Gillan Ropero</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded with ♥ by <a href="https://gillanfrances.github.io/portfolio/" target="_blank">Gillan Ropero</a>.
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
