--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 
 </head>
 <body>
+  <img src="assets/images/pattern-lines.svg" alt="Background Pattern" class="bg-lines">
+  <img src="assets/images/pattern-squiggly-line-top.svg" alt="Background Top" class="bg-squiggle-top">
+  <img src="assets/images/pattern-squiggly-line-bottom-desktop.svg" alt="Background Bottom" class="bg-squiggle-bottom">
 
-  <img src="/assets/images/logo-full.svg" alt="Coding Conference 2025 logo"/>
+  <img src="/assets/images/logo-full.svg" alt="Coding Conference 2025 logo" />
+
+  <!-- Form starts -->
 
   <h2>Your Journey to Coding Conf 2025 Starts Here!</h2>
 
@@ -52,6 +57,9 @@
   <button type="submit">Generate My Ticket</button>
   </div>
 
+  <!-- Form ends -->
+
+  <!-- Generated tickets starts -->
 <div class="success">
   <h2>Congrats, <span class="name-gradient">FullName</span>! </h2>
 
@@ -83,10 +91,11 @@
     <div class="ticket-id"></div>
   </div>
 </div>
+  <!-- Generated tickets ends -->
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded with ♥ by <a href="https://gillanfrances.github.io/portfolio/" target="_blank">Gillan Ropero</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
+    Coded with ♥ by <a href="#">Gillan Ropero</a>.
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
