--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <img src="assets/images/pattern-squiggly-line-top.svg" alt="Background Top" class="bg-squiggle-top">
   <img src="assets/images/pattern-squiggly-line-bottom-desktop.svg" alt="Background Bottom" class="bg-squiggle-bottom">
 
-  <img src="/assets/images/logo-full.svg" alt="Coding Conference 2025 logo" />
+  <img src="assets/images/logo-full.svg" alt="Coding Conference 2025 logo" />
 
   <!-- Form starts -->
 
@@ -72,7 +72,7 @@
     <div class="ticket-content">
       <div class="ticket-header">
         <div class="ticket-event">
-          <img src="/assets/images/logo-full.svg" alt="Coding Conference 2025 logo" /><br>
+          <img src="assets/images/logo-full.svg" alt="Coding Conference 2025 logo" /><br>
           <span class="event-date">Jan 31, 2025 / Austin, TX</span>
         </div>
       </div>
