--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <!-- Generated tickets starts -->
 <div class="success">
-  <h2>Congrats, <span class="name-gradient">FullName</span>! </h2>
+  <h2>Congrats, <span class="name-gradient">FullName</span>! Your ticket is ready.</h2>
 
   <p class="success-description">
     We've emailed your ticket to <span class="email-highlight">@email.com</span>
