--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
-    Coded with ♥ by <a href="#">Gillan Ropero</a>.
+    Coded with ♥ by <a href="https://gillanfrances.github.io/portfolio/">Gillan Ropero</a>.
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
